# labs

./: .gitignore  README.md  clock2.cpp  lab6  lab8  lab_3.sln  main2.cpp
LAB_1/: LAB_1.sln
LAB_1/LAB_1/: LAB_1.cpp  LAB_1.vcxproj
LAB_1/LAB_1/x64/Debug/: LAB_1.exe.recipe  LAB_1.ilk  vc143.idb
LAB_2/: clock2.cpp  clock2.h
LAB_2/MyClock_/: Clock.cpp  Clock.h  MyClock_.sln  MyClock_.vcxproj  MyClock_.vcxproj.filters  main.cpp
LAB_3/: Battery.cpp  Battery.hpp  CMakeLists.txt  Clock.cpp  Clock.h  Workshop.cpp  Workshop.hpp  main.cpp
LAB_4/Lab_4/: CMakeLists.txt
Stroki/Stroki/: Stroki.cpp  Stroki.sln  Stroki.vcxproj  Stroki.vcxproj.filters
Stroki/Stroki/Debug/: input.txt  result.txt  text.txt
Stroki/Stroki/Stroki/Debug/: Stroki.exe.recipe  Stroki.ilk  vc143.idb
lab7/lab7_1/: lab7_1.sln
lab7/lab7_1/lab7_1/: lab7_1.cpp  lab7_1.vcxproj
lab7/lab7_2/: lab7_2.sln
lab7/lab7_2/lab7_2/: lab7_2.cpp  lab7_2.vcxproj
lab8_test/: lab8_test.sln
lab8_test/lab8_test/: lab8_test.cpp  lab8_test.vcxproj  lab8_test.vcxproj.filters
lab8_test/lab8_test/x64/Debug/: lab8_test.exe.recipe  lab8_test.ilk  vc143.idb
lab_1/: project_1.sln
lab_1/project_1/: project_1.cpp  project_1.vcxproj
lab_1/project_1/x64/Debug/: vc143.idb  (+2 more)
lab_2/project_2/: project_2.cpp  project_2.sln
lab_2/project_2/project_2/: project_2.vcxproj  project_2.vcxproj.filters
lab_3/lab_3/: lab_3.cpp  lab_3.vcxproj
lab_6/lab_6/: lab_6.sln
lab_6/lab_6/lab_6/: lab_6.cpp  lab_6.vcxproj
lab_6/lab_6_2/: lab_6_2.sln
lab_6/lab_6_2/lab_6_2/: lab_6_2.cpp  lab_6_2.vcxproj  lab_6_2.vcxproj.filters
(+120 files in other folders)
